# xaloy

./: .gitignore  CMakeLists.txt  README  README.md  UpdateLog_cn.md  old-README.md
demo/: testsuite_demo.cc
example/: first_example.cxx
src/: CMakeLists.txt  README.txt  XAssert.cc  XAssert.h  XBuild.cc  XBuild.h  XBuilder.h  XPerformance.cc  XPerformance.h  XTest.cc  XTest.h  XTest.hpp  Xaloy-build.lua  Xaloy-parse.lua  Xaloy-testing.lua  Xaloy.cc  Xaloy.h  Xaloy.lua  xaloy-core-bind.lua  xaloy-core-compare.lua  xaloy-core-env.lua  xaloy-core-log.lua  xaloy-core.lua  xaloy-helper.lua  xaloy-io.lua  xaloy-others.lua  xaloy-test.lua  xaloytools.c  xaloytools.h  xaloytools.i  xaloytools_wrap.c
src/C-Ver/: xaloy.cc  xaloy.h  xaloyflow.cc  xaloyflow.h  xaloymachine.cc  xaloymachine.h  xaloyprinter.cc  xaloytest.cc  xaloytest.h
src/base/: common.cc  common.h  comparer.hpp  filestream.cc  filestream.h  printer.cc  printer.h
src/cpp/: CMakeLists.txt  xaloy.h  xaloyflow.cc  xaloyflow.h  xaloyprinter.cc  xaloyprinter.h  xaloytest.cc  xaloytest.h
src/tester/: reporter.cc  reporter.h  testcase.hpp  testprocess.cc  testprocess.h  testsuite.hpp
test/: test.lua  testdata.lua  xaloy-core-compare.lua  xaloy-core-env.lua  xaloy-core-log.lua  xaloy-core.lua  xaloy-gtest.lua  xaloy-test.lua
