IF(WIN32)
	ADD_DEFINITIONS(-DOS_WIN32)
ENDIF()

SET(CMAKE_USE_RELATIVE_PATHS ON)

ADD_SUBDIRECTORY(cpp)

SET(LUA_DIR "../lib/include/")
SET(LUA_LINK_DIR "../lib/")
IF(MINGW)
	SET(LUA_LIB "liblua.a")
ELSEIF(MSVC)
	SET(LUA_LIB "lua.lib")
ENDIF()

# build the xtools
INCLUDE_DIRECTORIES(${LUA_DIR})
LINK_DIRECTORIES(${LUA_LINK_DIR})
ADD_LIBRARY(xtools SHARED xaloytools.c)
TARGET_LINK_LIBRARIES(xtools ${LUA_LIB})